--- a/app/styles/_layout.scss
+++ b/app/styles/_layout.scss
@@ -2,3 +2,13 @@
   padding: 24px 0;
   border-bottom: 1px solid $gray-lighter;
 }
+
+body {
+  padding-top: 70px;
+}
+
+@media (max-width: $screen-sm) {
+  .intro-wrap {
+    padding: 10px;
+  }
+}
